src/styles/components/_features_list.scss
.easyrealestate-features-list-container {
    background-color: var(--wp--preset--color--easyrealestate-bg-light);
    border-radius: var(--wp--custom--border-radius--large);
    padding: var(--wp--preset--spacing--40);
    margin: 1rem 0;

    .easyrealestate-features-list-top {
        margin-bottom: 1rem;
    }

    h1 {
        font-size: var(--wp--preset--font-size--large);
    }

    .easyrealestate-features-list-header {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        margin-bottom: var(--wp--preset--spacing--30);

        .easyrealestate-features-list-header-action {
            .wp-block-button__link.wp-element-button {
                display: flex;
                align-items: center;
                justify-content: center;

                svg {
                    margin-left: var(--wp--preset--spacing--30);
                }
            }
        }
    }

    @media screen and (min-width: 768px) {
        .easyrealestate-features-list-header {
            flex-direction: row;
        }
    }

    .easyrealestate-features-list {
        padding: 0;
        margin: 0;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: var(--wp--preset--spacing--30);

        .easyrealestate-feature-item {
            list-style: none;
            display: flex;
            align-items: center;
            gap: var(--wp--preset--spacing--20);
            padding: var(--wp--preset--spacing--30);
            background-color: var(--wp--preset--color--easyrealestate-bg);
            border-radius: var(--wp--custom--border-radius--medium);
            width: 100%;

            .easyrealestate-feature-icon {
                width: 20px;
                height: 20px;
            }

            span {
                line-height: 1;
            }
        }
    }
}

@media screen and (min-width: 768px) {
    .easyrealestate-features-list-container {
        .easyrealestate-features-list {
            grid-template-columns: repeat(4, 1fr);
        }
    }
}

@media screen and (min-width: 1024px) {
    .easyrealestate-features-list-container {
        .easyrealestate-features-list {
            grid-template-columns: repeat(5, 1fr);
        }
    }
}

